--- a/.env.testing
+++ b/.env.testing
@@ -25,8 +25,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=testing
-DB_USERNAME=root
-DB_PASSWORD=123
+DB_USERNAME=abu
+DB_PASSWORD=p@$$w0rd
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
